<resources>
    <string name="app_name">Be Investor</string>
    <string name="updateQuotes">Refresh Quotes</string>
    <string name="goToMarket">Go to market</string>
    <string name="myWallet">My Wallet</string>
    <string name="refreshQuotes">Refresh quotes</string>
    <string name="icon_open_eye" translatable="false">&#xf06e;</string>
    <string name="icon_watchlist" translatable="false">&#xf201;</string>
    <string name="icon_closed_eye" translatable="false">&#xf070;</string>
    <string name="portfolio" translatable="false">&#xf200;</string>
    <string name="portfolio_">Portfolio</string>
    <string name="delete_symbol">&#xf014;</string>
    <string name="edit_symbol">&#xf044;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_you_have_an_account_yet">Don\'t you have an account yet? \n<u>Click here to SIGN UP</u></string>
    <string name="logo_description">B Investor Logo</string>
    <string name="emailHint">email@email.com</string>
    <string name="passwordHint">*******</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already registered? \n<u>Click here to SIGN IN</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="portfolioIcon">Portfolio</string>
    <string name="watchlist">Watchlist</string>
    <string name="icon_transaction" translatable="false">&#xf0ec;</string>
    <string name="transaction">Transaction</string>
    <string name="iconProfile" translatable="false">&#xf2be;</string>
    <string name="profile">Profile</string>
    <string name="preference_file_key">com.example.myapplication.PREFERENCE_FILE_KEY</string>
    <string name="icon_trash" translatable="false">&#xf056;</string>
    <string name="error_login">Invalid Username/Password</string>
    <string name="user_not_found">User not found</string>
    <string name="unavailable">unavailable</string>
    <string name="signup_failed">Signup failed</string>
    <string name="remember_me">Remember me</string>
    <string name="errorMessage">ErrorMessage</string>
    <string name="logout">Logout</string>
    <string name="loading">--</string>
    <string name="password_did_not_match_try_again">Password didn\'t match. Try again.</string>
    <string name="those_passwords_did_not_match_try_again">Those passwords didn\'t match. Try again.</string>
    <string name="user_already_registered">User already registered</string>
    <string name="invalid_username_use_a_valid_email">Invalid username. Use a valid email</string>
    <string name="transactions">Transactions</string>
    <string name="symbol_capital_letter">Symbol</string>
    <string name="symbol">symbol</string>
    <string name="logo">logo</string>
    <string name="current_price">Current Price</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="qt">Qt</string>
    <string name="prev_close">Prev Close</string>
    <string name="open">Open</string>
    <string name="low">Low</string>
    <string name="change">Change %</string>
    <string name="high">High</string>
    <string name="chang">Change</string>
    <string name="please_insert_an_initial_balance_between_0_1_000_000">Please insert an initial Balance between 0–1,000,000</string>
    <string name="email_username">Email / Username</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="change_password">Change Password</string>
    <string name="watchlist_">WatchList</string>
    <string name="add">Add</string>
    <string name="initial_cash">Initial Cash</string>
    <string name="ex_initial_amount">ex. 10,000.00</string>
    <string name="company_logo">company logo</string>
    <string name="ex_email_email_com">ex. email@email.com</string>
    <string name="ex_password">*******</string>
    <string name="loadingValue">--</string>
    <string name="cash">Cash</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="value_NumberShare">Value\nShare</string>
    <string name="last_NumberChange">Last\nChange%</string>
    <string name="add_remove_cash">Add / Remove Cash</string>
    <string name="invalid_value">Invalid value</string>
    <string name="insuficient_balance">Insuficient balance</string>
    <string name="your_balance_cannot_be_greater_than_1_000_000_00">Your balance cannot be greater than 1,000,000.00</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>

</resources>