<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="242dp"
                android:layout_height="235dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/b_investor_logo"
                android:contentDescription="@string/company_logo" />

            <FrameLayout
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/box_with_corner">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/material_dynamic_neutral90"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/editTextUsernameInput"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/ex_email_email_com"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:autofillHints="emailAddress" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/box_with_corner">

                <TextView
                    android:id="@+id/textView300"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/textView200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/material_dynamic_neutral90"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/password" />

                <TextView
                    android:id="@+id/eyePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/material_dynamic_neutral90"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/fontawesome"
                    android:onClick="toggleVisibilityPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/icon_closed_eye" />

                <EditText
                    android:id="@+id/editTextPasswordInput"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/ex_password"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:autofillHints="password" />

            </FrameLayout>

            <Button
                android:id="@+id/button_signIn"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/material_dynamic_primary40"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in"
                app:cornerRadius="6dp" />

            <TextView
                android:id="@+id/textView_goSignup"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_italic"
                android:onClick="goSignup"
                android:text="@string/don_t_you_have_an_account_yet"
                android:textColor="@color/material_dynamic_primary20" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="240dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>