<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="WatchList"
                android:textColor="@color/material_dynamic_primary20"
                android:textSize="36sp" />

            <FrameLayout
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/box_with_corner"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Add" />

                <AutoCompleteTextView
                    android:id="@+id/editText_StockToAdd"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:completionThreshold="1"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="symbol"
                    android:inputType="textAutoCorrect" />

            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="1dp"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="defaultPosition">

            </androidx.recyclerview.widget.RecyclerView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="500dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/material_dynamic_primary40"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:insetLeft="1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="goPortfolio"
                android:paddingLeft="0dp"
                android:paddingTop="42dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/portfolioIcon"
                android:textColor="@color/material_dynamic_primary40"
                app:cornerRadius="0dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fontawesome"
                android:gravity="center_horizontal"
                android:onClick="goPortfolio"
                android:text="@string/portfolio"
                android:textColor="@color/material_dynamic_primary40"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:insetLeft="1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="42dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/watchlist"
                android:textColor="@color/material_dynamic_primary40"
                app:cornerRadius="0dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fontawesome"
                android:gravity="center_horizontal"
                android:text="@string/icon_watchlist"
                android:textColor="@color/material_dynamic_primary40"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:insetLeft="1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="goTransactions"
                android:paddingLeft="0dp"
                android:paddingTop="42dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/transaction"
                android:textColor="@color/material_dynamic_primary40"
                app:cornerRadius="0dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fontawesome"
                android:gravity="center_horizontal"
                android:onClick="goTransactions"
                android:text="@string/icon_transaction"
                android:textColor="@color/material_dynamic_primary40"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:insetLeft="1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="goProfile"
                android:paddingLeft="0dp"
                android:paddingTop="42dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/profile"
                android:textColor="@color/material_dynamic_primary40"
                app:cornerRadius="0dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fontawesome"
                android:gravity="center_horizontal"
                android:onClick="goProfile"
                android:text="@string/iconProfile"
                android:textColor="@color/material_dynamic_primary40"
                android:textSize="40sp" />
        </FrameLayout>

    </LinearLayout>
    android:id="@+id/linearLayout2"

</androidx.constraintlayout.widget.ConstraintLayout>